<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00031C"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="409dp"
        android:layout_height="325dp"
        android:layout_marginEnd="1dp"
        android:contentDescription="@string/imagem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/estudando" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:text="@string/bem_vinde_ao_seu_futuro"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:background="#F0FFFFFF"
        android:backgroundTintMode="add"
        android:ems="10"
        android:foregroundTintMode="screen"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="12dp"
        android:shadowDy="100"
        android:singleLine="false"
        android:textColor="@color/cinza"
        android:textColorHint="#616161"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:background="#F0FFFFFF"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <Button
        android:id="@+id/button"
        android:layout_width="260dp"
        android:layout_height="62dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#FF9800"
        android:text="@string/entrar"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:rippleColor="#ffffff" />

    <Button
        android:id="@+id/button2"
        android:layout_width="260dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FF9800"
        android:text="@string/cadastrar_se"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:rippleColor="#ffffff"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>